[gd_scene load_steps=7 format=3 uid="uid://ry6nwwl2e4vm"]

[ext_resource type="Script" path="res://src/managers/overworld_manager/OverworldManager.gd" id="1_tqpex"]
[ext_resource type="PackedScene" uid="uid://nxpft531qbuj" path="res://src/managers/overworld_manager/overworld_node/OverworldNode.tscn" id="2_57xh2"]
[ext_resource type="PackedScene" uid="uid://crwug5jfc3efe" path="res://src/managers/overworld_manager/player_token/PlayerToken.tscn" id="3_e6gnu"]
[ext_resource type="Theme" uid="uid://bm3c3n45abu72" path="res://src/ui/themes/default_theme.tres" id="4_gk4pq"]
[ext_resource type="PackedScene" uid="uid://205v6jljjcr1" path="res://src/ui/deck_viewer/DeckViewer.tscn" id="5_d1dh2"]
[ext_resource type="PackedScene" uid="uid://oo21ik1hem1s" path="res://src/common/particle_effects/HintSelector.tscn" id="6_m6ut0"]

[node name="OverworldManager" type="Node2D"]
script = ExtResource("1_tqpex")

[node name="OverworldNodesHolder" type="Node2D" parent="."]

[node name="OverworldNode" parent="OverworldNodesHolder" instance=ExtResource("2_57xh2")]
position = Vector2(320, 960)
enemy = 2

[node name="OverworldNode2" parent="OverworldNodesHolder" instance=ExtResource("2_57xh2")]
position = Vector2(320, 768)

[node name="OverworldNode3" parent="OverworldNodesHolder" instance=ExtResource("2_57xh2")]
position = Vector2(64, 768)
enemy = 4

[node name="OverworldNode4" parent="OverworldNodesHolder" instance=ExtResource("2_57xh2")]
position = Vector2(64, 384)
enemy = 5

[node name="OverworldNode5" parent="OverworldNodesHolder" instance=ExtResource("2_57xh2")]
position = Vector2(448, 384)
enemy = 3

[node name="OverworldNode6" parent="OverworldNodesHolder" instance=ExtResource("2_57xh2")]
position = Vector2(256, 192)
enemy = 1

[node name="Line2D" type="Line2D" parent="."]

[node name="PlayerToken" parent="." instance=ExtResource("3_e6gnu")]
position = Vector2(320, 960)

[node name="DeckViewerButton" type="Button" parent="."]
offset_left = 544.0
offset_top = 32.0
offset_right = 704.0
offset_bottom = 70.0
theme = ExtResource("4_gk4pq")
text = "View Deck"

[node name="DeckViewer" parent="." instance=ExtResource("5_d1dh2")]
visible = false

[node name="HintSelector" parent="." instance=ExtResource("6_m6ut0")]
